# AndroidUtils

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  ouleiqi_0x21CFC0C9_public.asc  publish-mavencentral.gradle  settings.gradle  使用说明文档-widget-stepview.md
androidutils/: CMakeLists.txt  build.gradle
androidutils/src/main/: AndroidManifest.xml
androidutils/src/main/java-utils/org/tcshare/activity/: TCFileSelectorActivity.java  TCUpOpenSettingActivity.java  (+2 more)
androidutils/src/main/jni-source-utils/gpio/: CMakeLists.txt  gpio.cpp
androidutils/src/main/jni-source-utils/serialport/: CMakeLists.txt  RS485Serial.cpp  RS485Serial.h  RS485SerialMulti.cpp  RS485SerialMulti.h  serialport.cpp
androidutils/src/main/jni-source-utils/util/: PipeUtil.cpp
androidutils/src/main/res-utils/anim/: rotate_down.xml  rotate_up.xml
androidutils/src/main/res-utils/drawable/: bg_toast.xml  item_divider.xml
androidutils/src/main/res-utils/layout/: default_footer_layout.xml  dialog_bottom_container.xml  dialog_bottom_group.xml  dialog_bottom_item.xml  dialog_bt_search_layout.xml  dialog_loading.xml  dialog_loading_with_cancel.xml  fragment_webview.xml  item_dev.xml  item_selectpic_showphoto.xml  layout_load_more_footer.xml  layout_swipe_refresh_header.xml  my_toast.xml
androidutils/src/main/res-utils/values/: attrs_circle_imageview.xml  colors_swipe_load_layout.xml  dimens_swipe_load_layout.xml  file_selector_colors.xml  file_selector_strings.xml  strings-utils.xml  styles-utils.xml  styles_dialog_loading.xml
androidutils/src/main/res-utils/xml/: provider_paths.xml
(+294 files in other folders)
